# metagrid

./: pyproject.toml  release.py
.github/workflows/: publish.yml
examples/: full_example.py  jeudelavie.py  snake.py  sokoban.py  taquin.py  wordle.py
src/metagrid/: __init__.py
src/metagrid/backends/: abstract.py  arcade_impl.py
