[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "metagrid"
dynamic = ["version"]
description = "Metagrid is a simple game engine for 2D Grid Games"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Matthieu Marchand", email = "matthieu.marchand@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
    "arcade>=3.3.0",
    "pillow>=11"
]


[project.urls]
Homepage = "https://github.com/MMarchand-NSI/metagrid"
Repository = "https://github.com/MMarchand-NSI/metagrid"
Issues = "https://github.com/MMarchand-NSI/metagrid/issues"


[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "mypy>=1.11",
    "twine>=6.2.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/metagrid"]

[tool.hatch.build.targets.sdist]
include = [
  "src/metagrid",  # ← Changé de "src/boxy" à "src/metagrid"
  "README.md",
  "LICENSE",
  "NOTICE",
  "THIRD_PARTY_LICENSES/**",
  "CHANGELOG.md",
]
